# portal-x-api

./: .gitignore  README.md  deploy.sh  migrate.sh  pyproject.toml
accounts/: account_forms.py  admin.py  app_settings.py  apps.py  consumer.py  models.py  signals.py
accounts/forms/: __init__.py  account_forms.py  auth_forms.py  event_form.py
accounts/migrations/: 0001_initial.py
accounts/templates/account/: empty_page.html  index.html  page_protected.html
accounts/templates/account/base/: base.html  footer.html  header.html  meta.html  mobile_nav.html  off_canvas.html  script.html  sidebar.html  style.html
accounts/templates/account/event/: add_event.html  add_event_file_upload.html  event_list.html
accounts/templates/account/includes/: pagination.html
accounts/templates/account/includes/modal/: delete_event_modal.html  delete_keyword_modal.html  (+1 more)
accounts/templates/account/search/: search_keyword.html  zip_codes.html
accounts/templates/account/snippets/: app_version.html  notification_snippet.html
accounts/templates/account/user/: account_settings.html  notifications.html
accounts/templates/account/users/: beta_subscribers.html
accounts/templates/auth/: confirm_password_reset.html  forgot_password.html  login.html  password_reset_complete.html  password_reset_done.html  signup.html  verify_email.html
accounts/templates/auth/base/: base.html  script.html  style.html
accounts/templates/email/auth/: password_reset_email.html
accounts/templatetags/: app_version.py  notification_tags.py
accounts/urls/: __init__.py  account_urls.py  auth_urls.py
accounts/utils/: choices.py  context_processors.py  country.py  helper_func.py
accounts/views/: __init__.py  account_views.py  auth_views.py  base.py  profile_views.py
core/: urls.py
core/settings/: __init__.py  base.py  local.py  staging.py
docs/: api_documentation.md  geography_api_docs.md  gunicorn-worker.md  manual-deployment-guide.md  pg-dump.md  versioning.md
env_static/dash/assets/css/: misc.css
env_static/dash/assets/js/: init.js  script.js
env_static/home/assets/css/: misc.css  style.css
env_static/home/assets/js/: init.js  new-init copy.js
event/: admin.py  app_settings.py  apps.py  forms.py  models.py  process_event.py  serializers.py  signals.py
event/api/: authentication.py  location_routers.py  location_serializers.py  permissions.py  serializers copy.py  serializers.py  views.py
event/api/utils/: event_exception.py
event/factory/: engine.py  user_agents.py
event/factory/scrapers/: __init__.py  event_saver.py  luma_scaper.py
event/management/commands/: create_app_version.py  create_cities.py  create_states.py  fetch_events.py
event/management/commands/resources/: us_cities.csv  us_cities_mini.csv  us_states.csv
event/middleware/: guest_user.py  visitor.py
event/migrations/: 0001_initial.py  0002_alter_location_options_country_valided_and_more.py  0003_appversion.py  0004_alter_appversion_release_date.py  0005_event_featured.py  0006_event_end_date.py  0007_alter_event_event_source.py
event/templates/home/: index.html  join_beta.html  join_beta_success.html  search_result.html  submit_event.html  submit_event_success.html
event/templates/home/base/: base.html  footer.html  header.html  overlay.html  script.html  style.html
event/templates/home/error_page/: base.html  page_not_found.html
event/templates/home/includes/: desktop_featured_event.html  event_card.html  mobile_featured_event.html  og_meta.html  pagination.html  recent_search.html
event/templatetags/: misc_tags.py
event/urls/: __init__.py  event_urls.py  location_urls.py
event/utils/: helper_func.py  permissions.py
event/views/: __init__.py  api_views copy.py  api_views.py  base.py  location_views copy.py  location_views.py
requirements/: base.txt  main.txt  staging.txt
scripts/: bump_version.py  fetch_events.sh  fetch_events_from_all_events.sh  fetch_events_from_art_idea.sh  fetch_events_from_eventbrite.sh  misc.sh  setup_cron_job.sh  sync_meili.sh
sys_monitor/: apps.py  urls.py  views.py
sys_monitor/templates/sys_monitor/: system_info.html
sys_monitor/templatetags/: app_version.py
task/: app_settings.py  apps.py  signals.py  tokens.py
task/email/: mailer.py
task/management/commands/: sync_search_index.py  update_search_city.py
task/templates/mail/: confirm_email.html  message_received.html  reply_received.html
task/templatetags/: current_site.py
task/utils/: common_timezone.py  helper_func.py
